k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring
  namespace: monitoring
  labels:
    app: monitoring-app
spec:
  selector:
    app: monitoring
  ports:
    - name: http
      port: 5000
      targetPort: 5000
