k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-default-deny-ingress
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: monitoring
  
  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: monitoring

      ports:
        - protocol: TCP
          port: 5000
